Add javadocs to all classes